--- a/G/rapport/Makefile
+++ b/G/rapport/Makefile
@@ -1,6 +1,7 @@
 BASENAME=root
 STARTDIR=$(CURDIR)
 OUTDIR=$(CURDIR)/output
+PRINTER=s2a
 
 default: compile
 compile:
@@ -15,7 +16,7 @@ view: compile
 	evince $(OUTDIR)/$(BASENAME).pdf
 
 print:
-	cat $(BASENAME).pdf | ssh ask.diku.dk lpr -P s2a
+	cat $(BASENAME).pdf | ssh ask lpr -P $(PRINTER)
 
 clean:
 	rm -r $(OUTDIR)
