Omskriv en linje i Makefile\n\nMeget vigtigt.

--- a/G/rapport/Makefile
+++ b/G/rapport/Makefile
@@ -5,7 +5,7 @@ default: compile
 compile:
 	@mkdir -p $(OUTDIR)
 	pdflatex -output-directory="$(OUTDIR)" $(BASENAME).tex
-	-cd $(OUTDIR) && bibtex $(BASENAME)
+	-cd $(OUTDIR); bibtex $(BASENAME)
 	pdflatex -output-directory="$(OUTDIR)" $(BASENAME).tex
 	pdflatex -output-directory="$(OUTDIR)" $(BASENAME).tex
 
